tests/fsharp/conformance/wellformedness/E_Clashing_Values_in_AbstractClass01.bsl

E_Clashing_Values_in_AbstractClass01.fsx(22,11,22,16): typecheck error FS0041: A unique overload for method 'X' could not be determined based on type information prior to this program point. A type annotation may be needed.
Candidates:
 - member Q.X: unit -> decimal
 - member Q.X: unit -> float
